<resources>
    <string name="app_name">Restaurant</string>
    <string name="Restaurantinsert">맛집 등록</string>
    <string name="Restaurantname">맛집 이름</string>
    <string name="Restaurantaddress">주     소</string>
    <string name="Restaurantphone">전화   번호</string>
    <string name="Restaurantopen">영업   시간</string>
    <string name="RestaurantMenu">맛집  메뉴</string>
    <string name="Menuinsert">MenuInsert</string>
    <string name="Menu_Name">메뉴 제목</string>
    <string name="Menu_Name_insert">메뉴 제목 입력</string>
    <string name="Menu_price">메뉴 가격</string>
    <string name="Menu_price_insert">메뉴 가격 입력</string>
    <string name="Menu_report">메뉴 설명</string>
    <string name="Menu_report_insert">메뉴 설명 입력</string>
    <string name="Menu_star">메뉴 평점</string>
    <string name="Menu_star_insert">메뉴 평점 입력</string>
</resources>
