<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hansung.android.restaurant.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:gravity="center">

        <TextView
            android:id="@+id/MainName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:hint="@string/Restaurantname"
            android:textSize="30sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/MainIamge"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:padding="5sp"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/MainAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/Restaurantaddress"
                android:textSize="20sp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">


                <TextView
                    android:id="@+id/MainPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/Restaurantphone"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <ImageButton
                    android:id="@+id/call_Button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_phone_black_24dp" />
            </LinearLayout>


            <TextView
                android:id="@+id/MainOpen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Restaurantopen"
                android:gravity="center"
                android:textSize="20sp" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/RestaurantMenu"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20sp"
            android:padding="5dp" />

    </LinearLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>


</LinearLayout>
